// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Pagination -  prop type is enum and requires 'bullets' or 'simple' and does not produce an error when either is provided 1`] = `
<div>
  <Pagination
    type="bullets"
  />
  <Pagination
    type="simple"
  />
</div>
`;

exports[`Component: Pagination -  prop type is enum and requires 'bullets' or 'simple' and produces an error when neither is provided 1`] = `
<ul
  className="pagination pagination-test"
/>
`;

exports[`Component: Pagination -  renders 1`] = `
<ul
  className="pagination"
/>
`;

exports[`Component: Pagination -  renders arrows when prop arrows is provided 1`] = `
<Pagination
  arrows={true}
>
  <ul
    className="pagination"
  >
    <Arrow
      type="back"
    >
      <li
        aria-label="back"
        className="arrow-back"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
    <Arrow
      type="forward"
    >
      <li
        aria-label="forward"
        className="arrow-forward"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
  </ul>
</Pagination>
`;

exports[`Component: Pagination -  renders list items when prop items is provided 1`] = `
<ul
  className="pagination"
>
  <li
    className=""
    key="0"
  >
    

    <a
      href="#"
    >
      test#1
    </a>
    

  </li>
  <li
    className="active"
    key="1"
  >
    

    <a
      href="#"
    >
      test#2
    </a>
    

  </li>
</ul>
`;

exports[`Component: Pagination -  renders outermost arrows when prop farArrows is provided 1`] = `
<Pagination
  farArrows={true}
>
  <ul
    className="pagination"
  >
    <Arrow
      type="start"
    >
      <li
        aria-label="start"
        className="arrow-start"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
    <Arrow
      type="end"
    >
      <li
        aria-label="end"
        className="arrow-end"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
  </ul>
</Pagination>
`;

exports[`Component: Pagination -  renders text element when prop text is provided 1`] = `
<Pagination
  text="test"
>
  <ul
    className="pagination"
  >
    <li>
      

      <span
        className="text"
      >
        test
      </span>
      

    </li>
  </ul>
</Pagination>
`;

exports[`Component: Pagination - prop type is enum and requires 'bullets' or 'simple' and does not produce an error when either is provided 1`] = `
<div>
  <Pagination
    type="bullets"
  />
  <Pagination
    type="simple"
  />
</div>
`;

exports[`Component: Pagination - prop type is enum and requires 'bullets' or 'simple' and produces an error when neither is provided 1`] = `
<ul
  className="pagination pagination-test"
/>
`;

exports[`Component: Pagination - renders 1`] = `
<ul
  className="pagination"
/>
`;

exports[`Component: Pagination - renders arrows when prop arrows is provided 1`] = `
<Pagination
  arrows={true}
>
  <ul
    className="pagination"
  >
    <Arrow
      type="back"
    >
      <li
        aria-label="back"
        className="arrow-back"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
    <Arrow
      type="forward"
    >
      <li
        aria-label="forward"
        className="arrow-forward"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
  </ul>
</Pagination>
`;

exports[`Component: Pagination - renders list items when prop items is provided 1`] = `
<ul
  className="pagination"
>
  <li
    className=""
    key="0"
  >
    

    <a
      href="#"
    >
      test#1
    </a>
    

  </li>
  <li
    className="active"
    key="1"
  >
    

    <a
      href="#"
    >
      test#2
    </a>
    

  </li>
</ul>
`;

exports[`Component: Pagination - renders outermost arrows when prop farArrows is provided 1`] = `
<Pagination
  farArrows={true}
>
  <ul
    className="pagination"
  >
    <Arrow
      type="start"
    >
      <li
        aria-label="start"
        className="arrow-start"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
    <Arrow
      type="end"
    >
      <li
        aria-label="end"
        className="arrow-end"
      >
        

        <a
          href="#"
        />
        

      </li>
    </Arrow>
  </ul>
</Pagination>
`;

exports[`Component: Pagination - renders text element when prop text is provided 1`] = `
<Pagination
  text="test"
>
  <ul
    className="pagination"
  >
    <li>
      

      <span
        className="text"
      >
        test
      </span>
      

    </li>
  </ul>
</Pagination>
`;
